vimspector and prettier added

--- a/coc-settings.json
+++ b/coc-settings.json
@@ -5,7 +5,8 @@
         "html",
         "python",
         "xml",
-        "java"
+        "java",
+        "css"
     ],
     // python config
     "python.jediEnabled": false,
