--- a/coc-settings.json
+++ b/coc-settings.json
@@ -3,26 +3,23 @@
         "json",
         "markdown",
         "html",
+        "css",
+        "javascript",
+        "typescript",
         "python",
         "xml",
-        "java",
-        "css"
+        "java"
     ],
-    // python config
     "python.jediEnabled": false,
     "python.formatting.provider": "autopep8",
     "python.autoComplete.extraPaths": [
         "libqtile"
     ],
-    //json
     "json.format.enable": true,
-    // xml config
     "xml.format.enabled": true,
     "xml.format.joinContentLines": true,
     "xml.format.splitAttributes": true,
-    // explorer
     "explorer.width": 30,
     "explorer.icon.enableNerdfont": true,
     "explorer.previewAction.onHover": false
-    
 }
